# Autonomous-AI-Infrastructure-with-Claude-Code

./: LICENSE
ch-03/genesis/: .gitignore  BRAINSTORMING.md  README.md
ch-03/genesis/.claude/skills/genesis-new/: SKILL.md
ch-03/genesis/docs/: design.md
ch-03/genesis/scripts/: manual_e2e.py
ch-03/genesis/src/genesis/: github.py  scaffold.py
ch-03/genesis/templates/: onboarding_issue.md.j2  readme.md.j2
ch-03/genesis/templates/workflows/: genesis-merge.yml
ch-03/genesis/tests/e2e/: conftest.py  test_existing_repo.py  test_github.py  test_new_repo.py
ch-03/genesis/tests/unit/: test_server.py  test_workflows.py
ch-04/genesis/: .gitignore  CLAUDE.md  pyproject.toml
ch-04/genesis/.claude/skills/genesis-e2e/: SKILL.md
ch-04/genesis/docs/: evaluations.md
ch-04/genesis/src/genesis/: cli.py  server.py  workflows.py
ch-04/genesis/tests/unit/: test_cli.py  test_event_filter.py  test_localenv.py
