[project]
name = "genesis"
version = "0.1.0"
description = "Bootstrapper for autonomous agentic AI dev systems"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "jinja2>=3.1.6",
]

[project.scripts]
genesis = "genesis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genesis"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "playwright>=1.49",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
